app/assets/stylesheets/main.scss
/* ... */
.current_tags {
  min-height: 100px;
  width:48%;
  float:left;
  top:0;
  border: 1px solid black;
  padding: 2px;
}

.potential_tags {
  min-height: 100px;
  width:48%;
  float:left;
  top:0;
  border: 1px solid black;
  margin-left: 10px;
  padding: 2px;
}

.tag_editing {
  float:left;
  width: 100%;
}

.float_clear {
  clear: both;
}

.dfr_header {
  border-top: 1px solid black;
  margin-top: 5px;
  padding-top: 5px;
}

.data_content {
  display: none;
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 9999;
  background-color: rgba(1,1,1,0.8);
  display: none;
}

.overlay_block {
  margin-left: auto;
  margin-right: auto;
  height: 240px;
  width: 300px;
  background-color: white;
  top: 200px;
  position:relative;
  text-align: center;
}

table.new_hire_requests {
  margin-top: 10px;
  margin-bottom: 50px;
  width: 100%;
  border: 2px solid black;
  border-collapse: collapse;

  th {
    background-color: $header_grey
  }
  td {
    border-top: 1px solid black;
  }
}

.prompt_box {
  width: 90%;
  position: relative;
  height: 145px;
  margin-top: 10px;
}

.needed {
  color: red;
}

.hidden {
  display: none;
}

.left_report {
  position: absolute;
  top: 0;
  left: 0;
  width: 200px;
}

.right_report {
  position: relative;
  top: 0;
  right: 0;
  margin-left: 200px;
  min-height: 100px;
}

.report_legend {
  display: none;
}

.report_legend_table {
  width: 100%;
  border-collapse: collapse;
  border: none;

  td {
    border: none;
    width: 20%;
  }
}

.report_results table {
  width: 100%;
  border-collapse: collapse;
}

#report_fields .report_addition {
  margin-top: 10px;
}

form textarea {
  width: 80%;
}

.report_filter_indiv_container {
  border: 2px solid black;
  padding: 5px;

  .report_addition {
    border-bottom: 1px solid black;
    margin: 5px 0;
    padding-bottom: 5px;
  }
}

.add_report_group_link {
  margin: 5px 0;
}

.report_update_button {
  margin: 5px 0;
}

.new_report_field_link {
  margin: 5px 0;
}

.header {
  margin-bottom: 10px;
  font-weight: bold;
  font-size: 18px;
}

.submission_users {
  margin-bottom: 10px;
  margin-top: 10px;
}

.notification_email_block {
  width: 100%;
  border: 2px solid black;
}

hr {
  margin-top: 15px;
  margin-bottom: 15px;
}

.footer a {
  margin-left: 10px;
  margin-right: 10px;
}

.resource_name {
  font-size: 14px;
  margin-top: 10px;
  margin-bottom: 10px;
  font-weight: bold;
}

.applied_for {
  margin-top: 10px;
  border-collapse: collapsed;
  table {
    border: solid 2px black;
  }
  td, th {
    border: solid 1px black;
  }
}

.tag_in_submission {
  text-indent: 10px;;
}

.filtering {
  .filtering_row {
    position: relative;

    .filter_name {
      position: absolute;
      width: 100px;
      top: 0;
      left: 0;
    }

    .filter_inputs {
      position: relative;
      margin-left: 100px;
    }
  }
}

#token_header {
  cursor: pointer;
}

/* DEFAULTS
----------------------------------------------------------*/


#TopMenuWrap
  {
  width: 100%;
  height: 50px;
}

#TopMenuContent
  {
  width: 940px;
  height: 50px;
  margin: 0 auto 0 auto;
}

#TopMenuLinks
  {
  float: right;
  color: #9e9e9e;
  margin: 5px 17px;
  font: 8pt Arial !important;
}

#TopMenuLinks a
  {
  text-decoration: none;
  color: #9e9e9e;
  font: 8pt Arial !important;
  padding: 0 4px;
}

#TopMenuLinks a:hover
  {
  color: #ba282d;
}

#HeaderWrap
  {
  width: 100%;
  height: 115px;
}

#HeaderContent
  {
  width: 940px;
  height: 115px;
  margin: 0 auto 0 auto;
  background-image: image-url('TopMenuGradient.jpg');
  background-repeat: repeat-x;
  border: 1px solid #f0f0f2;
}

.VAElogo
  {
  width: 283px;
  height: 85px;
  float: left;
  margin: 14px 0 0 16px;
  cursor: pointer;
  background-image: image-url('VAElogo.png');
  width: 283px;
  height: 85px;
}

.VAElogo:hover
  {
  opacity: 0.7;
}

#MenuWrap
  {
  width: 100%;
  height: 36px;
}

#MenuContent
  {
  width: 940px;
  height: 36px;
  margin: 0 auto 0 auto;
  background-image: image-url('MenuGradient.jpg');
  background-repeat: repeat-x;
  border: 1px solid #f0f0f2;
  border-top: 1px solid #c2c2d3;
  max-width: 940px;
}

#MenuCenter
  {
  width: auto !important;
  height: 35px;
  margin: 0 auto 0 -3px !important;
  float: left;
}

#MainContentWrap
  {
  width: 100%;
  height: auto;
}

#MainContentDiv
  {
  width: 940px;
  height: auto;
  margin: 0 auto 0 auto;
}

#FooterWrap
  {
  width: 100%;
  height: auto;
}

#FooterContent
  {
  width: 940px;
  height: auto;
  margin: 20px auto 0 auto;
}

.VAEfooterLogo
  {
  float: left;
  height: 45px;
  margin: 0 0 0 376px;
  width: 180px;
}

/*Social Icons ---------------------------------------------------------------------*/
#SocialIcons
  {
  width: 277px;
  height: auto;
  float: right;
  margin: 0 -14px 0 0;
  color: #9e9e9e;
  font: 8pt Arial !important;
}

#SocialTable
  {
  float: left;
}

.Facebook {
  background: image-url('SocialIconSprite.png') no-repeat scroll -4px 0 transparent;
  cursor: pointer;
  display: block;
  float: right;
  height: 22px;
  text-indent: -9999px;
  width: 22px;
}
.Facebook:hover {
  background-position: -4px -23px;
}
.Facebook:active {
  background-position: -4px -46px;
}
.Twitter {
  background: image-url('SocialIconSprite.png') no-repeat scroll -28px 0 transparent;
  cursor: pointer;
  display: block;
  float: right;
  height: 22px;
  text-indent: -9999px;
  width: 22px;
}
.Twitter:hover {
  background-position: -28px -23px;
}
.Twitter:active {
  background-position: -28px -46px;
}
.Youtube {
  background: image-url('SocialIconSprite.png') no-repeat scroll -52px 0 transparent;
  cursor: pointer;
  display: block;
  float: right;
  height: 22px;
  text-indent: -9999px;
  width: 22px;
}
.Youtube:hover {
  background-position: -52px -23px;
}
.Youtube:active {
  background-position: -52px -46px;
}
/* ... */

